# serializer version: 1
# name: test_inspect
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      {
        "scenarios": [
          {
            "name": "example",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "b>1.0.0"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "b": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "c"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a"
              ]
            },
            "expected": {
              "satisfiable": true,
              "packages": {
                "a": "1.0.0",
                "b": "3.0.0"
              },
              "explanation": "The latest valid version of `b` should be installed. `b==3.0.0` is not valid because it requires `c` which does not exist."
            },
            "environment": {
              "python": "3.7",
              "prereleases": false
            },
            "template": "simple",
            "description": "This is an example scenario, in which the user depends on a single package `a` which requires `b`.",
            "source": "[PWD]/scenarios/example.json",
            "prefix": "example-97db95eb",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a",
              "\u2502       \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u251c\u2500\u2500 a",
              "\u2502   \u2514\u2500\u2500 a-1.0.0",
              "\u2502       \u251c\u2500\u2500 requires b>1.0.0",
              "\u2502       \u2502   \u251c\u2500\u2500 satisfied by b-2.0.0",
              "\u2502       \u2502   \u2514\u2500\u2500 satisfied by b-3.0.0",
              "\u2502       \u2514\u2500\u2500 requires python>=3.7",
              "\u2514\u2500\u2500 b",
              "    \u251c\u2500\u2500 b-1.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u251c\u2500\u2500 b-2.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 b-3.0.0",
              "        \u251c\u2500\u2500 requires c",
              "            \u2514\u2500\u2500 unsatisfied: no versions for package",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          }
        ]
      }
  
    ''',
  })
# ---
# name: test_inspect_invalid_target
  dict({
    'exit_code': 1,
    'stderr': '''
      File at '[PWD]/test.json' is not a valid scenario: Input data was truncated.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_inspect_invalid_target_skip_invalid
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      {
        "scenarios": [
          {
            "name": "example",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "b>1.0.0"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "b": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "c"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a"
              ]
            },
            "expected": {
              "satisfiable": true,
              "packages": {
                "a": "1.0.0",
                "b": "3.0.0"
              },
              "explanation": "The latest valid version of `b` should be installed. `b==3.0.0` is not valid because it requires `c` which does not exist."
            },
            "environment": {
              "python": "3.7",
              "prereleases": false
            },
            "template": "simple",
            "description": "This is an example scenario, in which the user depends on a single package `a` which requires `b`.",
            "source": "[PROJECT_ROOT]/scenarios/example.json",
            "prefix": "example-97db95eb",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a",
              "\u2502       \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u251c\u2500\u2500 a",
              "\u2502   \u2514\u2500\u2500 a-1.0.0",
              "\u2502       \u251c\u2500\u2500 requires b>1.0.0",
              "\u2502       \u2502   \u251c\u2500\u2500 satisfied by b-2.0.0",
              "\u2502       \u2502   \u2514\u2500\u2500 satisfied by b-3.0.0",
              "\u2502       \u2514\u2500\u2500 requires python>=3.7",
              "\u2514\u2500\u2500 b",
              "    \u251c\u2500\u2500 b-1.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u251c\u2500\u2500 b-2.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 b-3.0.0",
              "        \u251c\u2500\u2500 requires c",
              "            \u2514\u2500\u2500 unsatisfied: no versions for package",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          }
        ]
      }
  
    ''',
  })
# ---
# name: test_inspect_no_target_finds_all_valid_scenarios
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      {
        "scenarios": [
          {
            "name": "example",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "b>1.0.0"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "b": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "c"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a"
              ]
            },
            "expected": {
              "satisfiable": true,
              "packages": {
                "a": "1.0.0",
                "b": "3.0.0"
              },
              "explanation": "The latest valid version of `b` should be installed. `b==3.0.0` is not valid because it requires `c` which does not exist."
            },
            "environment": {
              "python": "3.7",
              "prereleases": false
            },
            "template": "simple",
            "description": "This is an example scenario, in which the user depends on a single package `a` which requires `b`.",
            "source": "[PWD]/scenarios/example.json",
            "prefix": "example-97db95eb",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a",
              "\u2502       \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u251c\u2500\u2500 a",
              "\u2502   \u2514\u2500\u2500 a-1.0.0",
              "\u2502       \u251c\u2500\u2500 requires b>1.0.0",
              "\u2502       \u2502   \u251c\u2500\u2500 satisfied by b-2.0.0",
              "\u2502       \u2502   \u2514\u2500\u2500 satisfied by b-3.0.0",
              "\u2502       \u2514\u2500\u2500 requires python>=3.7",
              "\u2514\u2500\u2500 b",
              "    \u251c\u2500\u2500 b-1.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u251c\u2500\u2500 b-2.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 b-3.0.0",
              "        \u251c\u2500\u2500 requires c",
              "            \u2514\u2500\u2500 unsatisfied: no versions for package",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-package-only-prereleases",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0a1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a"
              ]
            },
            "expected": {
              "satisfiable": true,
              "packages": {
                "a": "1.0.0a1"
              },
              "explanation": "Since there are only pre-release versions of `a` available, it should be installed even though the user did not include a pre-release specifier."
            },
            "environment": {
              "python": "3.7",
              "prereleases": false
            },
            "template": "simple",
            "description": "The user requires any version of package `a` which only has pre-release versions available.",
            "source": "[PWD]/scenarios/prereleases.json",
            "prefix": "requires-package-only-prereleases-5829a64d",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a",
              "\u2502       \u2514\u2500\u2500 unsatisfied: no matching version",
              "\u2514\u2500\u2500 a",
              "    \u2514\u2500\u2500 a-1.0.0a1",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-package-only-prereleases-in-range",
            "packages": {
              "a": {
                "versions": {
                  "0.1.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "1.0.0a1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a>0.1.0"
              ]
            },
            "expected": {
              "satisfiable": false,
              "packages": {},
              "explanation": "Since there are stable versions of `a` available, pre-release versions should not be selected without explicit opt-in."
            },
            "environment": {
              "python": "3.7",
              "prereleases": false
            },
            "template": "simple",
            "description": "The user requires a version of package `a` which only matches pre-release versions but they did not include a prerelease specifier.",
            "source": "[PWD]/scenarios/prereleases.json",
            "prefix": "requires-package-only-prereleases-in-range-2b0594c8",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a>0.1.0",
              "\u2502       \u2514\u2500\u2500 unsatisfied: no matching version",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-0.1.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 a-1.0.0a1",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-package-only-prereleases-in-range-global-opt-in",
            "packages": {
              "a": {
                "versions": {
                  "0.1.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "1.0.0a1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a>0.1.0"
              ]
            },
            "expected": {
              "satisfiable": true,
              "packages": {
                "a": "1.0.0a1"
              },
              "explanation": null
            },
            "environment": {
              "python": "3.7",
              "prereleases": true
            },
            "template": "simple",
            "description": "The user requires a version of package `a` which only matches pre-release versions. They did not include a prerelease specifier for the package, but they opted into pre-releases globally.",
            "source": "[PWD]/scenarios/prereleases.json",
            "prefix": "requires-package-only-prereleases-in-range-global-opt-in-51f94da2",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a>0.1.0",
              "\u2502       \u2514\u2500\u2500 unsatisfied: no matching version",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-0.1.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 a-1.0.0a1",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-package-prerelease-and-final-any",
            "packages": {
              "a": {
                "versions": {
                  "0.1.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "1.0.0a1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a"
              ]
            },
            "expected": {
              "satisfiable": true,
              "packages": {
                "a": "0.1.0"
              },
              "explanation": "Since the user did not provide a pre-release specifier, the older stable version should be selected."
            },
            "environment": {
              "python": "3.7",
              "prereleases": false
            },
            "template": "simple",
            "description": "The user requires any version of package `a` has a pre-release version available and an older non-prerelease version.",
            "source": "[PWD]/scenarios/prereleases.json",
            "prefix": "requires-package-prerelease-and-final-any-66989e88",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a",
              "\u2502       \u2514\u2500\u2500 satisfied by a-0.1.0",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-0.1.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 a-1.0.0a1",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-package-prerelease-specified-only-final-available",
            "packages": {
              "a": {
                "versions": {
                  "0.1.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "0.2.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "0.3.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a>=0.1.0a1"
              ]
            },
            "expected": {
              "satisfiable": true,
              "packages": {
                "a": "0.3.0"
              },
              "explanation": "The latest stable version should be selected."
            },
            "environment": {
              "python": "3.7",
              "prereleases": false
            },
            "template": "simple",
            "description": "The user requires a version of `a` with a pre-release specifier and only stable releases are available.",
            "source": "[PWD]/scenarios/prereleases.json",
            "prefix": "requires-package-prerelease-specified-only-final-available-8c3e26d4",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a>=0.1.0a1",
              "\u2502       \u251c\u2500\u2500 satisfied by a-0.1.0",
              "\u2502       \u251c\u2500\u2500 satisfied by a-0.2.0",
              "\u2502       \u2514\u2500\u2500 satisfied by a-0.3.0",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-0.1.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u251c\u2500\u2500 a-0.2.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 a-0.3.0",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-package-prerelease-specified-only-prerelease-available",
            "packages": {
              "a": {
                "versions": {
                  "0.1.0a1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "0.2.0a1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "0.3.0a1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a>=0.1.0a1"
              ]
            },
            "expected": {
              "satisfiable": true,
              "packages": {
                "a": "0.3.0a1"
              },
              "explanation": "The latest pre-release version should be selected."
            },
            "environment": {
              "python": "3.7",
              "prereleases": false
            },
            "template": "simple",
            "description": "The user requires a version of `a` with a pre-release specifier and only pre-release releases are available.",
            "source": "[PWD]/scenarios/prereleases.json",
            "prefix": "requires-package-prerelease-specified-only-prerelease-available-fa8a64e0",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a>=0.1.0a1",
              "\u2502       \u251c\u2500\u2500 satisfied by a-0.1.0a1",
              "\u2502       \u251c\u2500\u2500 satisfied by a-0.2.0a1",
              "\u2502       \u2514\u2500\u2500 satisfied by a-0.3.0a1",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-0.1.0a1",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u251c\u2500\u2500 a-0.2.0a1",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 a-0.3.0a1",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-package-prerelease-specified-mixed-available",
            "packages": {
              "a": {
                "versions": {
                  "0.1.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "0.2.0a1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "0.3.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "1.0.0a1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a>=0.1.0a1"
              ]
            },
            "expected": {
              "satisfiable": true,
              "packages": {
                "a": "1.0.0a1"
              },
              "explanation": "Since the user provided a pre-release specifier, the latest pre-release version should be selected."
            },
            "environment": {
              "python": "3.7",
              "prereleases": false
            },
            "template": "simple",
            "description": "The user requires a version of `a` with a pre-release specifier and both pre-release and stable releases are available.",
            "source": "[PWD]/scenarios/prereleases.json",
            "prefix": "requires-package-prerelease-specified-mixed-available-caf5dd1a",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a>=0.1.0a1",
              "\u2502       \u251c\u2500\u2500 satisfied by a-0.1.0",
              "\u2502       \u251c\u2500\u2500 satisfied by a-0.2.0a1",
              "\u2502       \u251c\u2500\u2500 satisfied by a-0.3.0",
              "\u2502       \u2514\u2500\u2500 satisfied by a-1.0.0a1",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-0.1.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u251c\u2500\u2500 a-0.2.0a1",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u251c\u2500\u2500 a-0.3.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 a-1.0.0a1",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-package-multiple-prereleases-kinds",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0a1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "1.0.0b1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "1.0.0rc1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a>=1.0.0a1"
              ]
            },
            "expected": {
              "satisfiable": true,
              "packages": {
                "a": "1.0.0rc1"
              },
              "explanation": "Release candidates should be the highest precedence pre-release kind."
            },
            "environment": {
              "python": "3.7",
              "prereleases": false
            },
            "template": "simple",
            "description": "The user requires `a` which has multiple prereleases available with different labels.",
            "source": "[PWD]/scenarios/prereleases.json",
            "prefix": "requires-package-multiple-prereleases-kinds-08c2f99b",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a>=1.0.0a1",
              "\u2502       \u251c\u2500\u2500 satisfied by a-1.0.0a1",
              "\u2502       \u251c\u2500\u2500 satisfied by a-1.0.0b1",
              "\u2502       \u2514\u2500\u2500 satisfied by a-1.0.0rc1",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-1.0.0a1",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u251c\u2500\u2500 a-1.0.0b1",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 a-1.0.0rc1",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-package-multiple-prereleases-numbers",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0a1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "1.0.0a2": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "1.0.0a3": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a>=1.0.0a1"
              ]
            },
            "expected": {
              "satisfiable": true,
              "packages": {
                "a": "1.0.0a3"
              },
              "explanation": "The latest alpha version should be selected."
            },
            "environment": {
              "python": "3.7",
              "prereleases": false
            },
            "template": "simple",
            "description": "The user requires `a` which has multiple alphas available.",
            "source": "[PWD]/scenarios/prereleases.json",
            "prefix": "requires-package-multiple-prereleases-numbers-4cf7acef",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a>=1.0.0a1",
              "\u2502       \u251c\u2500\u2500 satisfied by a-1.0.0a1",
              "\u2502       \u251c\u2500\u2500 satisfied by a-1.0.0a2",
              "\u2502       \u2514\u2500\u2500 satisfied by a-1.0.0a3",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-1.0.0a1",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u251c\u2500\u2500 a-1.0.0a2",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 a-1.0.0a3",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-transitive-package-only-prereleases",
            "packages": {
              "a": {
                "versions": {
                  "0.1.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "b"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "b": {
                "versions": {
                  "1.0.0a1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a"
              ]
            },
            "expected": {
              "satisfiable": true,
              "packages": {
                "a": "0.1.0",
                "b": "1.0.0a1"
              },
              "explanation": "Since there are only pre-release versions of `b` available, it should be selected even though the user did not opt-in to pre-releases."
            },
            "environment": {
              "python": "3.7",
              "prereleases": false
            },
            "template": "simple",
            "description": "The user requires any version of package `a` which requires `b` which only has pre-release versions available.",
            "source": "[PWD]/scenarios/prereleases.json",
            "prefix": "requires-transitive-package-only-prereleases-fa02005e",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a",
              "\u2502       \u2514\u2500\u2500 satisfied by a-0.1.0",
              "\u251c\u2500\u2500 a",
              "\u2502   \u2514\u2500\u2500 a-0.1.0",
              "\u2502       \u251c\u2500\u2500 requires b",
              "\u2502       \u2502   \u2514\u2500\u2500 unsatisfied: no matching version",
              "\u2502       \u2514\u2500\u2500 requires python>=3.7",
              "\u2514\u2500\u2500 b",
              "    \u2514\u2500\u2500 b-1.0.0a1",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-transitive-package-only-prereleases-in-range",
            "packages": {
              "a": {
                "versions": {
                  "0.1.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "b>0.1"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "b": {
                "versions": {
                  "0.1.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "1.0.0a1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a"
              ]
            },
            "expected": {
              "satisfiable": false,
              "packages": {},
              "explanation": "Since there are stable versions of `b` available, the pre-release version should not be selected without explicit opt-in. The available version is excluded by the range requested by the user."
            },
            "environment": {
              "python": "3.7",
              "prereleases": false
            },
            "template": "simple",
            "description": "The user requires package `a` which has a dependency on a package which only matches pre-release versions but they did not include a pre-release specifier.",
            "source": "[PWD]/scenarios/prereleases.json",
            "prefix": "requires-transitive-package-only-prereleases-in-range-4800779d",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a",
              "\u2502       \u2514\u2500\u2500 satisfied by a-0.1.0",
              "\u251c\u2500\u2500 a",
              "\u2502   \u2514\u2500\u2500 a-0.1.0",
              "\u2502       \u251c\u2500\u2500 requires b>0.1",
              "\u2502       \u2502   \u2514\u2500\u2500 unsatisfied: no matching version",
              "\u2502       \u2514\u2500\u2500 requires python>=3.7",
              "\u2514\u2500\u2500 b",
              "    \u251c\u2500\u2500 b-0.1.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 b-1.0.0a1",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-transitive-package-only-prereleases-in-range-opt-in",
            "packages": {
              "a": {
                "versions": {
                  "0.1.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "b>0.1"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "b": {
                "versions": {
                  "0.1.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "1.0.0a1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a",
                "b>0.0.0a1"
              ]
            },
            "expected": {
              "satisfiable": true,
              "packages": {
                "a": "0.1.0",
                "b": "1.0.0a1"
              },
              "explanation": "Since the user included a dependency on `b` with a pre-release specifier, a pre-release version can be selected."
            },
            "environment": {
              "python": "3.7",
              "prereleases": false
            },
            "template": "simple",
            "description": "The user requires package `a` which has a dependency on a package which only matches pre-release versions; the user has opted into allowing prereleases in `b` explicitly.",
            "source": "[PWD]/scenarios/prereleases.json",
            "prefix": "requires-transitive-package-only-prereleases-in-range-opt-in-4ca10c42",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u251c\u2500\u2500 requires a",
              "\u2502   \u2502   \u2514\u2500\u2500 satisfied by a-0.1.0",
              "\u2502   \u2514\u2500\u2500 requires b>0.0.0a1",
              "\u2502       \u2514\u2500\u2500 satisfied by b-0.1.0",
              "\u251c\u2500\u2500 a",
              "\u2502   \u2514\u2500\u2500 a-0.1.0",
              "\u2502       \u251c\u2500\u2500 requires b>0.1",
              "\u2502       \u2502   \u2514\u2500\u2500 unsatisfied: no matching version",
              "\u2502       \u2514\u2500\u2500 requires python>=3.7",
              "\u2514\u2500\u2500 b",
              "    \u251c\u2500\u2500 b-0.1.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 b-1.0.0a1",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-transitive-prerelease-and-stable-dependency",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "c==2.0.0b1"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "b": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "c>=1.0.0,<=3.0.0"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "c": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.0.0b1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a",
                "b"
              ]
            },
            "expected": {
              "satisfiable": false,
              "packages": {},
              "explanation": "Since the user did not explicitly opt-in to a prerelease, it cannot be selected."
            },
            "environment": {
              "python": "3.7",
              "prereleases": false
            },
            "template": "simple",
            "description": "A transitive dependency has both a prerelease and a stable selector, but can only be satisfied by a prerelease",
            "source": "[PWD]/scenarios/prereleases.json",
            "prefix": "requires-transitive-prerelease-and-stable-dependency-31b546ef",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u251c\u2500\u2500 requires a",
              "\u2502   \u2502   \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u2502   \u2514\u2500\u2500 requires b",
              "\u2502       \u2514\u2500\u2500 satisfied by b-1.0.0",
              "\u251c\u2500\u2500 a",
              "\u2502   \u2514\u2500\u2500 a-1.0.0",
              "\u2502       \u251c\u2500\u2500 requires c==2.0.0b1",
              "\u2502       \u2502   \u2514\u2500\u2500 satisfied by c-2.0.0b1",
              "\u2502       \u2514\u2500\u2500 requires python>=3.7",
              "\u251c\u2500\u2500 b",
              "\u2502   \u2514\u2500\u2500 b-1.0.0",
              "\u2502       \u251c\u2500\u2500 requires c>=1.0.0,<=3.0.0",
              "\u2502       \u2502   \u2514\u2500\u2500 satisfied by c-1.0.0",
              "\u2502       \u2514\u2500\u2500 requires python>=3.7",
              "\u2514\u2500\u2500 c",
              "    \u251c\u2500\u2500 c-1.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 c-2.0.0b1",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-transitive-prerelease-and-stable-dependency-opt-in",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "c==2.0.0b1"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "b": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "c>=1.0.0,<=3.0.0"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "c": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.0.0b1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a",
                "b",
                "c>=0.0.0a1"
              ]
            },
            "expected": {
              "satisfiable": true,
              "packages": {
                "a": "1.0.0",
                "b": "1.0.0",
                "c": "2.0.0b1"
              },
              "explanation": "Since the user explicitly opted-in to a prerelease for `c`, it can be installed."
            },
            "environment": {
              "python": "3.7",
              "prereleases": false
            },
            "template": "simple",
            "description": "A transitive dependency has both a prerelease and a stable selector, but can only be satisfied by a prerelease. The user includes an opt-in to prereleases of the transitive dependency.",
            "source": "[PWD]/scenarios/prereleases.json",
            "prefix": "requires-transitive-prerelease-and-stable-dependency-opt-in-dd00a87f",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u251c\u2500\u2500 requires a",
              "\u2502   \u2502   \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u2502   \u251c\u2500\u2500 requires b",
              "\u2502   \u2502   \u2514\u2500\u2500 satisfied by b-1.0.0",
              "\u2502   \u2514\u2500\u2500 requires c>=0.0.0a1",
              "\u2502       \u251c\u2500\u2500 satisfied by c-1.0.0",
              "\u2502       \u2514\u2500\u2500 satisfied by c-2.0.0b1",
              "\u251c\u2500\u2500 a",
              "\u2502   \u2514\u2500\u2500 a-1.0.0",
              "\u2502       \u251c\u2500\u2500 requires c==2.0.0b1",
              "\u2502       \u2502   \u2514\u2500\u2500 satisfied by c-2.0.0b1",
              "\u2502       \u2514\u2500\u2500 requires python>=3.7",
              "\u251c\u2500\u2500 b",
              "\u2502   \u2514\u2500\u2500 b-1.0.0",
              "\u2502       \u251c\u2500\u2500 requires c>=1.0.0,<=3.0.0",
              "\u2502       \u2502   \u2514\u2500\u2500 satisfied by c-1.0.0",
              "\u2502       \u2514\u2500\u2500 requires python>=3.7",
              "\u2514\u2500\u2500 c",
              "    \u251c\u2500\u2500 c-1.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 c-2.0.0b1",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-package-does-not-exist",
            "packages": {},
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a"
              ]
            },
            "expected": {
              "satisfiable": false,
              "packages": {},
              "explanation": null
            },
            "environment": {
              "python": "3.7",
              "prereleases": false
            },
            "template": "simple",
            "description": "The user requires any version of package `a` which does not exist.",
            "source": "[PWD]/scenarios/requires-does-not-exist.json",
            "prefix": "requires-package-does-not-exist-57cd4136",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u2514\u2500\u2500 root",
              "    \u2514\u2500\u2500 requires a",
              "        \u2514\u2500\u2500 unsatisfied: no versions for package"
            ]
          },
          {
            "name": "requires-exact-version-does-not-exist",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a==2.0.0"
              ]
            },
            "expected": {
              "satisfiable": false,
              "packages": {},
              "explanation": null
            },
            "environment": {
              "python": "3.7",
              "prereleases": false
            },
            "template": "simple",
            "description": "The user requires an exact version of package `a` but only other versions exist",
            "source": "[PWD]/scenarios/requires-does-not-exist.json",
            "prefix": "requires-exact-version-does-not-exist-eaa03067",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a==2.0.0",
              "\u2502       \u2514\u2500\u2500 unsatisfied: no matching version",
              "\u2514\u2500\u2500 a",
              "    \u2514\u2500\u2500 a-1.0.0",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-greater-version-does-not-exist",
            "packages": {
              "a": {
                "versions": {
                  "0.1.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a>1.0.0"
              ]
            },
            "expected": {
              "satisfiable": false,
              "packages": {},
              "explanation": null
            },
            "environment": {
              "python": "3.7",
              "prereleases": false
            },
            "template": "simple",
            "description": "The user requires a version of `a` greater than `1.0.0` but only smaller or equal versions exist",
            "source": "[PWD]/scenarios/requires-does-not-exist.json",
            "prefix": "requires-greater-version-does-not-exist-6e8e01df",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a>1.0.0",
              "\u2502       \u2514\u2500\u2500 unsatisfied: no matching version",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-0.1.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 a-1.0.0",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-less-version-does-not-exist",
            "packages": {
              "a": {
                "versions": {
                  "2.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "4.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a<2.0.0"
              ]
            },
            "expected": {
              "satisfiable": false,
              "packages": {},
              "explanation": null
            },
            "environment": {
              "python": "3.7",
              "prereleases": false
            },
            "template": "simple",
            "description": "The user requires a version of `a` less than `1.0.0` but only larger versions exist",
            "source": "[PWD]/scenarios/requires-does-not-exist.json",
            "prefix": "requires-less-version-does-not-exist-e45cec3c",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a<2.0.0",
              "\u2502       \u2514\u2500\u2500 unsatisfied: no matching version",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-2.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u251c\u2500\u2500 a-3.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 a-4.0.0",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "transitive-requires-package-does-not-exist",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "b"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a"
              ]
            },
            "expected": {
              "satisfiable": false,
              "packages": {},
              "explanation": null
            },
            "environment": {
              "python": "3.7",
              "prereleases": false
            },
            "template": "simple",
            "description": "The user requires package `a` but `a` requires package `b` which does not exist",
            "source": "[PWD]/scenarios/requires-does-not-exist.json",
            "prefix": "transitive-requires-package-does-not-exist-aca2796a",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a",
              "\u2502       \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u2514\u2500\u2500 a",
              "    \u2514\u2500\u2500 a-1.0.0",
              "        \u251c\u2500\u2500 requires b",
              "            \u2514\u2500\u2500 unsatisfied: no versions for package",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-direct-incompatible-versions",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a==1.0.0",
                "a==2.0.0"
              ]
            },
            "expected": {
              "satisfiable": false,
              "packages": {},
              "explanation": null
            },
            "environment": {
              "python": "3.7",
              "prereleases": false
            },
            "template": "simple",
            "description": "The user requires two incompatible, existing versions of package `a`",
            "source": "[PWD]/scenarios/requires-incompatible-versions.json",
            "prefix": "requires-direct-incompatible-versions-063ec9d3",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u251c\u2500\u2500 requires a==1.0.0",
              "\u2502   \u2502   \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u2502   \u2514\u2500\u2500 requires a==2.0.0",
              "\u2502       \u2514\u2500\u2500 satisfied by a-2.0.0",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-1.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 a-2.0.0",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-transitive-incompatible-with-root-version",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "b==2.0.0"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "b": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a",
                "b==1.0.0"
              ]
            },
            "expected": {
              "satisfiable": false,
              "packages": {},
              "explanation": null
            },
            "environment": {
              "python": "3.7",
              "prereleases": false
            },
            "template": "simple",
            "description": "The user requires packages `a` and `b` but `a` requires a different version of `b`",
            "source": "[PWD]/scenarios/requires-incompatible-versions.json",
            "prefix": "requires-transitive-incompatible-with-root-version-638350f3",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u251c\u2500\u2500 requires a",
              "\u2502   \u2502   \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u2502   \u2514\u2500\u2500 requires b==1.0.0",
              "\u2502       \u2514\u2500\u2500 satisfied by b-1.0.0",
              "\u251c\u2500\u2500 a",
              "\u2502   \u2514\u2500\u2500 a-1.0.0",
              "\u2502       \u251c\u2500\u2500 requires b==2.0.0",
              "\u2502       \u2502   \u2514\u2500\u2500 satisfied by b-2.0.0",
              "\u2502       \u2514\u2500\u2500 requires python>=3.7",
              "\u2514\u2500\u2500 b",
              "    \u251c\u2500\u2500 b-1.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 b-2.0.0",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-transitive-incompatible-with-transitive",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "c==1.0.0"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "b": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "c==2.0.0"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "c": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a",
                "b"
              ]
            },
            "expected": {
              "satisfiable": false,
              "packages": {},
              "explanation": null
            },
            "environment": {
              "python": "3.7",
              "prereleases": false
            },
            "template": "simple",
            "description": "The user requires package `a` and `b`; `a` and `b` require different versions of `c`",
            "source": "[PWD]/scenarios/requires-incompatible-versions.json",
            "prefix": "requires-transitive-incompatible-with-transitive-9b595175",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u251c\u2500\u2500 requires a",
              "\u2502   \u2502   \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u2502   \u2514\u2500\u2500 requires b",
              "\u2502       \u2514\u2500\u2500 satisfied by b-1.0.0",
              "\u251c\u2500\u2500 a",
              "\u2502   \u2514\u2500\u2500 a-1.0.0",
              "\u2502       \u251c\u2500\u2500 requires c==1.0.0",
              "\u2502       \u2502   \u2514\u2500\u2500 satisfied by c-1.0.0",
              "\u2502       \u2514\u2500\u2500 requires python>=3.7",
              "\u251c\u2500\u2500 b",
              "\u2502   \u2514\u2500\u2500 b-1.0.0",
              "\u2502       \u251c\u2500\u2500 requires c==2.0.0",
              "\u2502       \u2502   \u2514\u2500\u2500 satisfied by c-2.0.0",
              "\u2502       \u2514\u2500\u2500 requires python>=3.7",
              "\u2514\u2500\u2500 c",
              "    \u251c\u2500\u2500 c-1.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 c-2.0.0",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-python-version-does-not-exist",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=4.0",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a==1.0.0"
              ]
            },
            "expected": {
              "satisfiable": false,
              "packages": {},
              "explanation": null
            },
            "environment": {
              "python": "3.7",
              "prereleases": false
            },
            "template": "simple",
            "description": "The user requires a package which requires a Python version that does not exist",
            "source": "[PWD]/scenarios/requires-python.json",
            "prefix": "requires-python-version-does-not-exist-0825b69c",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a==1.0.0",
              "\u2502       \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u2514\u2500\u2500 a",
              "    \u2514\u2500\u2500 a-1.0.0",
              "        \u2514\u2500\u2500 requires python>=4.0 (incompatible with environment)"
            ]
          },
          {
            "name": "requires-python-version-less-than-current",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": "<=3.8",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a==1.0.0"
              ]
            },
            "expected": {
              "satisfiable": false,
              "packages": {},
              "explanation": null
            },
            "environment": {
              "python": "3.9",
              "prereleases": false
            },
            "template": "simple",
            "description": "The user requires a package which requires a Python version less than the current version",
            "source": "[PWD]/scenarios/requires-python.json",
            "prefix": "requires-python-version-less-than-current-f9296b84",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.9",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a==1.0.0",
              "\u2502       \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u2514\u2500\u2500 a",
              "    \u2514\u2500\u2500 a-1.0.0",
              "        \u2514\u2500\u2500 requires python<=3.8 (incompatible with environment)"
            ]
          },
          {
            "name": "requires-python-version-greater-than-current",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.10",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a==1.0.0"
              ]
            },
            "expected": {
              "satisfiable": false,
              "packages": {},
              "explanation": null
            },
            "environment": {
              "python": "3.9",
              "prereleases": false
            },
            "template": "simple",
            "description": "The user requires a package which requires a Python version greater than the current version",
            "source": "[PWD]/scenarios/requires-python.json",
            "prefix": "requires-python-version-greater-than-current-a11d5394",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.9",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a==1.0.0",
              "\u2502       \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u2514\u2500\u2500 a",
              "    \u2514\u2500\u2500 a-1.0.0",
              "        \u2514\u2500\u2500 requires python>=3.10 (incompatible with environment)"
            ]
          },
          {
            "name": "requires-python-version-greater-than-current-many",
            "packages": {
              "a": {
                "versions": {
                  "2.0.0": {
                    "requires_python": ">=3.10",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.1.0": {
                    "requires_python": ">=3.10",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.2.0": {
                    "requires_python": ">=3.10",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.3.0": {
                    "requires_python": ">=3.10",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.4.0": {
                    "requires_python": ">=3.10",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.5.0": {
                    "requires_python": ">=3.10",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.0.0": {
                    "requires_python": ">=3.11",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.1.0": {
                    "requires_python": ">=3.11",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.2.0": {
                    "requires_python": ">=3.11",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.3.0": {
                    "requires_python": ">=3.11",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.4.0": {
                    "requires_python": ">=3.11",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.5.0": {
                    "requires_python": ">=3.11",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a==1.0.0"
              ]
            },
            "expected": {
              "satisfiable": false,
              "packages": {},
              "explanation": null
            },
            "environment": {
              "python": "3.9",
              "prereleases": false
            },
            "template": "simple",
            "description": "The user requires a package which has many versions which all require a Python version greater than the current version",
            "source": "[PWD]/scenarios/requires-python.json",
            "prefix": "requires-python-version-greater-than-current-many-02dc550c",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.9",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a==1.0.0",
              "\u2502       \u2514\u2500\u2500 unsatisfied: no matching version",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-2.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.10 (incompatible with environment)",
              "    \u251c\u2500\u2500 a-2.1.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.10 (incompatible with environment)",
              "    \u251c\u2500\u2500 a-2.2.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.10 (incompatible with environment)",
              "    \u251c\u2500\u2500 a-2.3.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.10 (incompatible with environment)",
              "    \u251c\u2500\u2500 a-2.4.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.10 (incompatible with environment)",
              "    \u251c\u2500\u2500 a-2.5.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.10 (incompatible with environment)",
              "    \u251c\u2500\u2500 a-3.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.11 (incompatible with environment)",
              "    \u251c\u2500\u2500 a-3.1.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.11 (incompatible with environment)",
              "    \u251c\u2500\u2500 a-3.2.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.11 (incompatible with environment)",
              "    \u251c\u2500\u2500 a-3.3.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.11 (incompatible with environment)",
              "    \u251c\u2500\u2500 a-3.4.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.11 (incompatible with environment)",
              "    \u2514\u2500\u2500 a-3.5.0",
              "        \u2514\u2500\u2500 requires python>=3.11 (incompatible with environment)"
            ]
          },
          {
            "name": "requires-python-version-greater-than-current-backtrack",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.9",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.0.0": {
                    "requires_python": ">=3.10",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.0.0": {
                    "requires_python": ">=3.11",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "4.0.0": {
                    "requires_python": ">=3.12",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a"
              ]
            },
            "expected": {
              "satisfiable": true,
              "packages": {
                "a": "1.0.0"
              },
              "explanation": null
            },
            "environment": {
              "python": "3.9",
              "prereleases": false
            },
            "template": "simple",
            "description": "The user requires a package where recent versions require a Python version greater than the current version, but an older version is compatible.",
            "source": "[PWD]/scenarios/requires-python.json",
            "prefix": "requires-python-version-greater-than-current-backtrack-ef060cef",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.9",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a",
              "\u2502       \u251c\u2500\u2500 satisfied by a-1.0.0",
              "\u2502       \u251c\u2500\u2500 satisfied by a-2.0.0",
              "\u2502       \u251c\u2500\u2500 satisfied by a-3.0.0",
              "\u2502       \u2514\u2500\u2500 satisfied by a-4.0.0",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-1.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.9",
              "    \u251c\u2500\u2500 a-2.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.10 (incompatible with environment)",
              "    \u251c\u2500\u2500 a-3.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.11 (incompatible with environment)",
              "    \u2514\u2500\u2500 a-4.0.0",
              "        \u2514\u2500\u2500 requires python>=3.12 (incompatible with environment)"
            ]
          },
          {
            "name": "requires-python-version-greater-than-current-excluded",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.9",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.0.0": {
                    "requires_python": ">=3.10",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.0.0": {
                    "requires_python": ">=3.11",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "4.0.0": {
                    "requires_python": ">=3.12",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a>=2.0.0"
              ]
            },
            "expected": {
              "satisfiable": false,
              "packages": {},
              "explanation": null
            },
            "environment": {
              "python": "3.9",
              "prereleases": false
            },
            "template": "simple",
            "description": "The user requires a package where recent versions require a Python version greater than the current version, but an excluded older version is compatible.",
            "source": "[PWD]/scenarios/requires-python.json",
            "prefix": "requires-python-version-greater-than-current-excluded-1bde0c18",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.9",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a>=2.0.0",
              "\u2502       \u251c\u2500\u2500 satisfied by a-2.0.0",
              "\u2502       \u251c\u2500\u2500 satisfied by a-3.0.0",
              "\u2502       \u2514\u2500\u2500 satisfied by a-4.0.0",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-1.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.9",
              "    \u251c\u2500\u2500 a-2.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.10 (incompatible with environment)",
              "    \u251c\u2500\u2500 a-3.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.11 (incompatible with environment)",
              "    \u2514\u2500\u2500 a-4.0.0",
              "        \u2514\u2500\u2500 requires python>=3.12 (incompatible with environment)"
            ]
          }
        ]
      }
  
    ''',
  })
# ---
# name: test_inspect_one_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_inspect_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
